# mageec

./: CMakeLists.txt  ChangeLog
doc/: CMakeLists.txt  building-mageec.texi  function-features.texi  mageec-design.texi  mageec-feature-extract.texi  mageec-gcc.texi  mageec-interfaces.texi  mageec.texi  module-features.texi  notes.txt
lib/ML/: 1NN.cpp  C5.cpp
lib/ML/C5/: CMakeLists.txt
plugin/gcc_feature_extract/: CMakeLists.txt  ChangeLog
plugin/llvm_feature_extract/: CMakeLists.txt  FeatureExtract.cpp  Features.h
script/: build-autoconf.py  build-cmake.py  combined-elimination.py  feature-extract.py  mageec.py  measure-code-size.py
tools/gcc_driver/: ChangeLog  Driver.cpp  Parameters.h
